# personal

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  README_eng.md  pyproject.toml  pytest.ini  redis.conf  requirements.txt  requirements_develop.txt  swagger.json
__tests__/__fixtures__/: fixtures_db.py  fixtures_query.py
__tests__/tests_person/: test_user_registrition.py  test_user_registrition_not_valid.py
business/: urls_api.py  views_business.py
person/: access_tokens.py  admin.py  apps.py  interfaces.py  middleware.py  models.py  permissions.py  urls.py  urls_api.py  views.py
person/jwt/: person_jwt_access_token.py  person_jwt_manager.py
person/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_remove_user_patronymic_user_password_hash_and_more.py  0004_remove_user_role_delete_role.py  0005_accessrolesmodel_blacklistmodel_businesselementmodel_and_more.py  0005_businesselementmodel_rolemodel_accessrolesmodel_and_more.py  0006_alter_businesselementmodel_code_and_more.py  0006_user_usernane_alter_businesselementmodel_code_and_more.py  0007_remove_user_user_is_acti_7f3bc2_idx_and_more.py  0008_alter_businesselementmodel_code.py  0009_alter_businesselementmodel_code.py  0010_remove_user_usernane_alter_businesselementmodel_code_and_more.py  0011_alter_businesselementmodel_code_and_more.py  0012_alter_businesselementmodel_code.py  0013_alter_businesselementmodel_code_and_more.py  0015_alter_businesselementmodel_code.py  (+16 more)
project/: asgi.py  bcoding.py  cookies.py  hasher.py  middleware.py  settings.py  urls.py  urls_api.py
(+10 files in other folders)
